2004-04-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/DIFFSERV-CONFIG-MIB: added (RFC 3747).

2004-03-03  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/APM-MIB: added (RFC 3729).

2004-02-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/VDSL-LINE-MIB: added (RFC 3728).

2004-02-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/HC-PerfHist-TC-MIB: added (RFC 3705).

2004-01-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidiff.c: Fixed potential segfault in
	checkTypeCompatibility(). Thanks to Mike.

2003-12-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/POWER-ETHERNET-MIB: added (RFC 3621).

2003-12-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-python.c, tools/dump-xml.c: Fixed segfaults upon
	unresolvable parent type names.

	* tools/dump-cm.c: Added an explicit float-cast in one place
	to ensure execatly equal values on different platforms so that
	the test suite is happy again.

2003-12-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.4.2.tar.gz: released version 0.4.2. Time for a new
	release upon several requests during recent days and months. :-)
	The are numerous bug fixes, MIB updates, added MIBs, and new
	smilint and smidiff checks.

	* test/dumps/*: Checked and ppdated all test cases so
	that the whole suite should complete without failures
	again.

2003-12-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidiff.c: Fixed error messages on changed base
	types for node comparisons: now the node names are reported
	and not the underlying type names. Thanks to Mike.

	* mibs/*: More robust Makefiles, initially to support the
	cygwin build and installation process. Thanks to Harold.

2003-11-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/ATM2-MIB: added (RFC 3606).

2003-10-02  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Fixed a bug with pending (forward, but not
	resolved) definitions of identifiers that appear again in a